hotfix: fix z-index

--- a/frontend/src/styles/components/SelectRouteModal.scss
+++ b/frontend/src/styles/components/SelectRouteModal.scss
@@ -15,6 +15,7 @@
   width: 350px;
   padding: 25px;
   overflow-y: auto;
+  z-index: 5;
   .modal-title {
     font-family: $mainFont;
     font-size: 25px;
